<resources>
    <string name="app_name">MyBand</string>
    <string name="name">Name</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="password2">Repeat the password</string>
    <string name="category">Category</string>
    <string name="typeArtist">Artist</string>
    <string name="typeBand">Band</string>
    <string name="typePromoter">Promoter</string>
    <string name="signin">Sign in</string>
    <string name="signup">Sign up</string>
    <string name="autoLogin">Auto login</string>
    <string name="createAccount">Create an account</string>
    <string name="profile">Profile</string>
    <string name="events">Events</string>
    <string name="location">Location</string>
    <string name="title_activity_maps">Map</string>
    <string name="update">Edit Account</string>
    <string name="delete">Delete Account</string>
    <string name="logout">Logout</string>

    <!-- Error messages -->
    <string name="userAndPasswordDoesntMatch">User And Password Doesn\'t Match!</string>
    <string name="userDoesntExist">User Doesn\'t Exist!</string>
    <string name="userAlreadyExists">User Already Exists!</string>
    <string name="serverError">Server Error!</string>
    <string name="connectionError">Connection error!</string>
    <string name="invalidinputs">Invalid inputs!</string>
    <string name="errorlogin">Error login!</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
